--- a/src/components/apiDelegation/reusables/OverviewPageContent/OverviewPageContent.module.css
+++ b/src/components/apiDelegation/reusables/OverviewPageContent/OverviewPageContent.module.css
@@ -57,7 +57,10 @@
   margin-top: 2rem;
 }
 
-.accordion{
-  max-height: 300px;
-  overflow-y: auto;
+@media only screen and (min-width: 768px) {
+  .accordion{
+    overflow-y: auto;
+    max-height: 300px;
+  }
 }
+
